[package]
name = "x-rent-contract"
version = "0.1.0"
edition = "2021"
authors = ["X-Rent Team"]
description = "Crosschain Crypto Renting Platform Smart Contract on Stellar"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
